--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,13 @@
 [submodule "my_plugins/vim-airline"]
 	path = my_plugins/vim-airline
 	url = https://github.com/vim-airline/vim-airline.git
+
+[submodule "my_plugins/vimwiki"]
+	path = my_plugins/vimwiki
+	url = https://github.com/vimwiki/vimwiki.git
+[submodule "my_plugins/vim-devicons"]
+	path = my_plugins/vim-devicons
+	url = https://github.com/ryanoasis/vim-devicons.git
+[submodule "my_plugins/undotree"]
+	path = my_plugins/undotree
+	url = https://github.com/mbbill/undotree.git
