--- a/.gitmodules
+++ b/.gitmodules
@@ -49,7 +49,6 @@
 [submodule "my_plugins/vim-airline"]
 	path = my_plugins/vim-airline
 	url = https://github.com/vim-airline/vim-airline.git
-
 [submodule "my_plugins/vimwiki"]
 	path = my_plugins/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
@@ -59,3 +58,12 @@
 [submodule "my_plugins/undotree"]
 	path = my_plugins/undotree
 	url = https://github.com/mbbill/undotree.git
+[submodule "my_plugins/vim-colorscheme-switcher"]
+	path = my_plugins/vim-colorscheme-switcher
+	url = https://github.com/xolox/vim-colorscheme-switcher.git
+[submodule "my_plugins/vim-misc"]
+	path = my_plugins/vim-misc
+	url = https://github.com/xolox/vim-misc.git
+[submodule "my_plugins/vim-obsession"]
+	path = my_plugins/vim-obsession
+	url = https://github.com/tpope/vim-obsession.git
