--- a/.gitmodules
+++ b/.gitmodules
@@ -46,9 +46,6 @@
 [submodule "my_plugins/YouCompleteMe"]
 	path = my_plugins/YouCompleteMe
 	url = https://github.com/ycm-core/YouCompleteMe.git
-[submodule "my_plugins/vim-airline"]
-	path = my_plugins/vim-airline
-	url = https://github.com/vim-airline/vim-airline.git
 [submodule "my_plugins/vimwiki"]
 	path = my_plugins/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
@@ -67,3 +64,18 @@
 [submodule "my_plugins/vim-obsession"]
 	path = my_plugins/vim-obsession
 	url = https://github.com/tpope/vim-obsession.git
+[submodule "my_plugins/ultisnips"]
+	path = my_plugins/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
+[submodule "my_plugins/vim-snippets"]
+	path = my_plugins/vim-snippets
+	url = https://github.com/honza/vim-snippets.git
+[submodule "my_plugins/onedark.vim"]
+	path = my_plugins/onedark.vim
+	url = https://github.com/joshdick/onedark.vim.git
+[submodule "my_plugins/vim-airline"]
+	path = my_plugins/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
+[submodule "my_plugins/vim-airline-themes"]
+	path = my_plugins/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
