--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "my_plugins/ultisnips"]
 	path = my_plugins/ultisnips
 	url = https://github.com/SirVer/ultisnips.git
+[submodule "my_plugins/nvim-ipy"]
+	path = my_plugins/nvim-ipy
+	url = https://github.com/bfredl/nvim-ipy.git
