update TaskList submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,9 +28,6 @@
 [submodule "my_plugins/vim-cellmode"]
 	path = my_plugins/vim-cellmode
 	url = https://github.com/julienr/vim-cellmode.git
-[submodule "my_plugins/vim-ipython"]
-	path = my_plugins/vim-ipython
-	url = https://github.com/ivanov/vim-ipython.git
 [submodule "my_plugins/vim-jekyll"]
 	path = my_plugins/vim-jekyll
 	url = https://github.com/parkr/vim-jekyll.git
@@ -85,3 +82,12 @@
 [submodule "my_plugins/nvim-ipy"]
 	path = my_plugins/nvim-ipy
 	url = https://github.com/bfredl/nvim-ipy.git
+[submodule "my_plugins/vim-ipython-cell"]
+	path = my_plugins/vim-ipython-cell
+	url = https://github.com/hanschen/vim-ipython-cell.git
+[submodule "my_plugins/vim-slime"]
+	path = my_plugins/vim-slime
+	url = https://github.com/jpalardy/vim-slime.git
+[submodule "my_plugins/TaskList.vim"]
+	path = my_plugins/TaskList.vim
+	url = https://github.com/vim-scripts/TaskList.vim
