--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "my_plugins/TaskList.vim"]
 	path = my_plugins/TaskList.vim
 	url = https://github.com/vim-scripts/TaskList.vim
+[submodule "my_plugins/coc.nvim"]
+	path = my_plugins/coc.nvim
+	url = https://github.com/neoclide/coc.nvim.git
